WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293202
REGRESSION (
294915@main
): Can no longer enable log channels in debug builds
https://bugs.webkit.org/show_bug.cgi?id=293202
Summary
REGRESSION (294915@main): Can no longer enable log channels in debug builds
Simon Fraser (smfr)
Reported
2025-05-18 12:49:05 PDT
After
https://commits.webkit.org/294915@main
, the following does not work: `run-minibrowser --debug -WebCoreLogging "Layout”` This prevents developers for easily enabling log channels during development. <
rdar://151564733
>
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-05-18 12:50:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45565
EWS
Comment 2
2025-05-18 16:56:02 PDT
Committed
295080@main
(8a57bdea634b): <
https://commits.webkit.org/295080@main
> Reviewed commits have been landed. Closing PR #45565 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug