REGRESSION (294915@main): Can no longer enable log channels in debug builds https://bugs.webkit.org/show_bug.cgi?id=293202 rdar://151564733

Reviewed by Wenson Hsieh.

Revert the logging-related parts of 294915@main since they broke reading the
log channel string.

* Source/WTF/wtf/LogChannels.cpp:
(WTF::LogChannels::initializeLogChannelsIfNecessary):
* Source/WTF/wtf/LogChannels.h:
(WTF::LogChannels::initializeLogChannelsIfNecessary): Deleted.
* Source/WebKit/Shared/AuxiliaryProcess.cpp:
(WebKit::AuxiliaryProcess::applyProcessCreationParameters):

Canonical link: https://commits.webkit.org/295080@main